--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -11,7 +11,7 @@
     <string name="import_wallet_dialog_message">导入钱包会删除现有钱包的所有信息，请确保现有钱包的私钥信息已完成备份！</string>
     <string name="confirm">确定</string>
     <string name="cancel">取消</string>
-    <string name="please_input_password_again">请再次输入密码</string>
+    <string name="please_enter_password_again">请再次输入密码</string>
     <string name="remember_password">该密码用于加密钱包信息和解锁钱包，请牢记！！</string>
     <string name="account_address">账户地址</string>
     <string name="backup_private_key">备份私钥</string>
@@ -41,11 +41,11 @@
     <!--translate  Second-->
     <string name="password_error">密码错误</string>
     <string name="enter_private_key">请输入私钥</string>
-    <string name="input_error">输入错误</string>
+    <string name="enter_error">输入错误</string>
     <string name="logout">登出</string>
     <string name="logout_failure">登出账户失败</string>
     <string name="set_password_for_your_wallet">请为导入的钱包设置密码</string>
-    <string name="input_password">请输入密码</string>
+    <string name="enter_password">请输入密码</string>
     <string name="save_wallet_file_warning">钱包文件和私钥请妥善保管，私钥丢失将丢失钱包。</string>
     <string name="check_my_transaction_records">查看我的交易记录</string>
     <string name="no_transaction_records">无交易记录</string>
@@ -95,7 +95,7 @@
     <string name="my_account">我的账户</string>
     <string name="balance">余额</string>
     <string name="on_transaction">当前正在发起交易，请勿退出</string>
-    <string name="please_input_transaction_amount">请输入交易数额</string>
+    <string name="please_enter_transaction_amount">请输入交易数额</string>
     <string name="successfully_copied">复制成功</string>
     <string name="double_click_for_exit">再按一次返回键退出程序</string>
     <string name="transaction_to">向  %s   转账</string>
@@ -107,8 +107,8 @@
     <!--translate forth-->
     <string name="to_setting_grant_permission">点击"确定"跳转至系统设置开启权限</string>
     <string name="network_not_reachable">网络状态异常，请检查您的网络设置</string>
-    <string name="please_input_address_name">请输入帐户名称</string>
-    <string name="please_input_receive_account">请输入收款账户地址</string>
+    <string name="please_enter_address_name">请输入帐户名称</string>
+    <string name="please_enter_receive_account">请输入收款账户地址</string>
     <string name="app_need_update">您的应用需要更新，点击"确定"开始更新</string>
     <string name="address_over_quantity">您添加的地址已超过一百笔，请删除后继续添加</string>
     <string name="language_chinese_simplified">中文(简体)</string>
