这里暂时用input

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
 
     <!--translate  Second-->
     <string name="password_error">Password error</string>
-    <string name="enter_error">Enter error</string>
+    <string name="enter_error">Input error</string>
     <string name="logout">Log out</string>
     <string name="logout_failure">logout failed</string>
     <string name="enter_password">Please enter password</string>
