检查应用更新，跳转google市场

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,5 +126,6 @@
     <string name="unable_to_trade_at_present">Unable to trade at present, failed to acquire balance</string>
     <string name="no_wallet">There is no wallet available at present. Please create the wallet first.</string>
     <string name="address_repeat">Address repeated, please re-enter</string>
+    <string name="install_failed">安装失败</string>
 
 </resources>
