--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -124,6 +124,7 @@
     <string name="cannot_send_email">目前无法发送邮件</string>
     <string name="keystore_is_damaged">文件已毁损，请重新登入</string>
     <string name="email_subject">邮件标题</string>
+    <string name="email_body">邮件内容</string>
     <string name="send_success">发送成功</string>
     <string name="send_fail">发送失败</string>
 
