--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -11,7 +11,7 @@
     <string name="import_wallet_dialog_message">導入錢包會刪除現有錢包的所有信息，請確保現有錢包的私鑰信息已經完成備份！</string>
     <string name="confirm">確定</string>
     <string name="cancel">取消</string>
-    <string name="please_input_password_again">請再次輸入密碼</string>
+    <string name="please_enter_password_again">請再次輸入密碼</string>
     <string name="remember_password">該密碼用於加錢包信息和解鎖錢包，請牢記！！</string>
     <string name="account_address">帳戶地址</string>
     <string name="backup_private_key">備份私鑰</string>
@@ -48,11 +48,11 @@
     <!--translate  Second-->
     <string name="password_error">密碼錯誤</string>
     <string name="enter_private_key">請輸入私鑰</string>
-    <string name="input_error">輸入錯誤</string>
+    <string name="enter_error">輸入錯誤</string>
     <string name="logout">登出</string>
     <string name="logout_failure">登出帳戶失敗</string>
     <string name="set_password_for_your_wallet">請為導入的錢包設置密碼</string>
-    <string name="input_password">請輸入密碼</string>
+    <string name="enter_password">請輸入密碼</string>
     <string name="save_wallet_file_warning">錢包文件和私鑰請妥善保管，私鑰丟失將丟失錢包。</string>
     <string name="check_my_transaction_records">查看我的交易紀錄</string>
     <string name="no_transaction_records">無交易紀錄</string>
@@ -90,7 +90,7 @@
     <string name="address_name">帳戶名稱</string>
     <string name="no_account_address_to_choose_from">當前沒有可選擇的帳戶地址</string>
     <string name="address">地址</string>
-    <string name="please_input_address">請輸入地址</string>
+    <string name="please_enter_address">請輸入地址</string>
     <string name="save_data_failure">保存數據失敗</string>
     <string name="currency">幣種</string>
     <string name="my_account">我的帳戶</string>
@@ -100,7 +100,7 @@
     <string name="account_data_error">帳戶數據异常！</string>
     <string name="data_acquisition_error">獲取數據异常</string>
     <string name="on_transaction">當前正在發起交易，請勿退出</string>
-    <string name="please_input_transaction_amount">請輸入交易數額</string>
+    <string name="please_enter_transaction_amount">請輸入交易數額</string>
     <string name="successfully_copied">複製成功</string>
     <string name="sure_to_delete">確定删除</string>
     <string name="no_account_address_add">沒有收款帳戶地址，請添加</string>
@@ -108,8 +108,8 @@
     <!--translate forth-->
     <string name="to_setting_grant_permission">點擊"確定"跳轉至系統設置開啟權限</string>
     <string name="network_not_reachable">網絡狀態異常，請檢查您的網絡設置</string>
-    <string name="please_input_address_name">請輸入帳戶名稱</string>
-    <string name="please_input_receive_account">請輸入收款賬戶地址</string>
+    <string name="please_enter_address_name">請輸入帳戶名稱</string>
+    <string name="please_enter_receive_account">請輸入收款賬戶地址</string>
     <string name="app_need_update">您的應用需要更新，點擊"確定"開始更新</string>
     <string name="address_over_quantity">您添加的地址已超過一百筆，請刪除後繼續添加</string>
     <string name="language_chinese_simplified">中文(簡體)</string>
