--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -27,7 +27,7 @@
     <string name="settings">設置</string>
     <string name="receive_account_address">收款帳戶地址</string>
     <string name="transaction_amount">交易數額</string>
-    <string name="check_wallet_info">查看錢包信息</string>
+    <string name="view_wallet_info">查看錢包信息</string>
     <string name="address_manager">地址管理</string>
     <string name="modify_password">修改密碼</string>
     <string name="save_private_key_hint">建議將私鑰信息寫在紙上，私密保存</string>
@@ -76,7 +76,7 @@
     <string name="password_entered_not_match">兩次輸入的密碼不一致</string>
     <string name="password_length_error">密碼長度錯誤</string>
     <string name="please_log_in_first">您還未登錄，請先登錄</string>
-    <string name="sure_logout">確定登出？</string>
+    <string name="confirm_logout">確定登出？</string>
     <string name="the_address_of_receiving_account_is_empty">收款帳戶地址為空</string>
     <string name="the_address_of_receiving_account_is_error">收款帳戶地址錯誤</string>
     <string name="private_key_error">私密金鑰格式錯誤</string>
@@ -102,7 +102,7 @@
     <string name="on_transaction">當前正在發起交易，請勿退出</string>
     <string name="please_enter_transaction_amount">請輸入交易數額</string>
     <string name="successfully_copied">複製成功</string>
-    <string name="sure_to_delete">確定删除</string>
+    <string name="confirm_delete">確定删除</string>
     <string name="no_account_address_add">沒有收款帳戶地址，請添加</string>
     <string name="password_rule"><![CDATA[0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM!@#¥%^&*-_]]></string>
     <!--translate forth-->
@@ -133,6 +133,6 @@
 
     <string name="tv_transaction_detail">%s %s</string>
     <string name="install_failed">安裝失敗</string>
-
+    <string name="incomplete_transaction">未完成交易</string>
 
 </resources>
