--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -35,10 +35,10 @@
     <string name="send_wallet_file_by_email">邮件发送钱包文件</string>
     <string name="email_json_rule">可通过邮件发送文件(钱包加密文件，包含私钥，公钥等重要信息)，当APP被删除时，可用来重新导入恢复钱包</string>
     <string name="insert_address">新增账户地址</string>
-    <string name="modify_authorized_representatives">修改授权代表</string>
+    <string name="change_representatives">修改授权代表</string>
     <string name="address_alias">账户别名</string>
     <string name="save">保存</string>
-    <string name="Language_switching">语言切换</string>
+    <string name="Language_switching">语言</string>
     <!--translate  Second-->
     <string name="password_error">密码错误</string>
     <string name="enter_private_key">请输入私钥</string>
