--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="scan">Scan</string>
     <string name="send">Send</string>
     <string name="settings">Settings</string>
-    <string name="receive_account_address">Receiving account address</string>
+    <string name="receive_account">Receiving account</string>
     <string name="transaction_amount">Transaction amount</string>
     <string name="view_wallet_info">View wallet info</string>
     <string name="address_manager">Address management</string>
