--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -42,6 +42,7 @@
 
 
     <string name="double_click_for_exit">再按一次返回鍵退出程序</string>
+    <string name="transaction_to">向  %s   轉帳</string>
     <string name="authorized_representative_address">授權代表地址帳戶</string>
 
 
