--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="double_click_for_exit">Press the return button again to exit the program.</string>
     <string name="no_account_address_to_choose_from">Currently, there is no account address to choose from</string>
 
+    <string name="transaction_to">To %s  </string>
     <string name="authorized_representative_address">Authorized representative address account</string>
     <string name="wallet_info">Wallet information</string>
     <string name="private_key">Private key</string>
