--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -133,5 +133,6 @@
     <string name="tv_transaction_detail">%s %s</string>
     <string name="install_failed">安装失败</string>
     <string name="incomplete_transaction">未完成交易</string>
+    <string name="version_name">Version  </string>
 
 </resources>
