连接服务器超时，遍历当前所有服务器进行切换

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -135,5 +135,6 @@
     <string name="install_failed">安裝失敗</string>
     <string name="incomplete_transaction">未完成交易</string>
     <string name="version_name">Version  </string>
+    <string name="change_server">切換服務器</string>
 
 </resources>
