--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -134,5 +134,6 @@
     <string name="install_failed">安装失败</string>
     <string name="incomplete_transaction">未完成交易</string>
     <string name="version_name">Version  </string>
+    <string name="change_server">切换服务器</string>
 
 </resources>
