交易數據顯示

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -135,5 +135,6 @@
     <string name="incomplete_transaction">未完成交易</string>
     <string name="version_name">Version  </string>
     <string name="change_server">切换服务器</string>
+    <string name="show_more">点击显示更多</string>
 
 </resources>
