--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -137,4 +137,9 @@
     <string name="change_server">切换服务器</string>
     <string name="show_more">点击显示更多</string>
 
+
+    <!--TV START-->
+    <string name="login">登录</string>
+    <!--TV END-->
+
 </resources>
