--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,6 +140,7 @@
 
     <!--TV START-->
     <string name="login">登录</string>
+    <string name="str_star">*</string>
     <!--TV END-->
 
 </resources>
