--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -141,5 +141,6 @@
 
     <!--TV START-->
     <string name="login">登錄</string>
+    <string name="str_star">*</string>
     <!--TV END-->
 </resources>
