修正文案顯示和界面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,7 +90,6 @@
     <string name="private_key">Private key</string>
     <string name="address_name">title of account</string>
     <string name="address">Address</string>
-    <string name="please_enter_address">Please enter address.</string>
     <string name="save_data_failure">Save data failed.</string>
     <string name="currency">Currency</string>
     <string name="my_account">My account</string>
@@ -99,7 +98,7 @@
     <string name="account_data_error">Account data error</string>
     <string name="data_acquisition_error">Data acquisition error</string>
     <string name="on_transaction">Trading is currently under way, please do not quit.</string>
-    <string name="please_enter_transaction_amount">Please enter transaction Amount.</string>
+    <string name="please_enter_transaction_amount">Please enter transaction amount.</string>
     <string name="successfully_copied">Successfully copied</string>
     <string name="confirm_delete">Confirm delete</string>
     <string name="no_account_address_add">No account address for collection, please add</string>
