--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="version_name">Version  </string>
     <string name="change_server">Change server</string>
     <string name="show_more">Click to see more</string>
+    <string name="private_format">123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz</string>
 </resources>
