显示切换币种并且请求

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,7 @@
     <!--TV END-->
 
     <string name="private_format">123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz</string>
+    <string name="see">See</string>
+    <string name="hide">Hide</string>
+
 </resources>
