--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,6 +140,9 @@
     <!--TV START-->
     <string name="login">登录</string>
     <string name="str_star">* </string>
+    <string name="see">查看</string>
+    <string name="hide">隐藏</string>
+
     <!--TV END-->
 
 </resources>
