--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -141,5 +141,8 @@
     <!--TV START-->
     <string name="login">登錄</string>
     <string name="str_star">* </string>
+    <string name="see">查看</string>
+    <string name="hide">隐藏</string>
+
     <!--TV END-->
 </resources>
