设置TV「交易数额」只能输入8位小数

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -142,6 +142,7 @@
     <string name="str_star">* </string>
     <string name="see">查看</string>
     <string name="hide">隐藏</string>
+    <string name="amount_edit_digits">1234567890.</string>
 
     <!--TV END-->
 
