--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,5 +151,8 @@
     <string name="see">See</string>
     <string name="hide">Hide</string>
     <string name="amount_edit_digits">1234567890.</string>
+    <string name="data_str">Date</string>
+    <string name="account_str">Account</string>
+    <string name="amount_str">Amount</string>
 
 </resources>
