--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -143,6 +143,7 @@
     <string name="see">查看</string>
     <string name="hide">隐藏</string>
     <string name="amount_edit_digits">1234567890.</string>
+    <string name="browse">总览</string>
 
     <!--TV END-->
 
