--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -144,6 +144,7 @@
     <string name="see">查看</string>
     <string name="hide">隐藏</string>
     <string name="amount_edit_digits">1234567890.</string>
+    <string name="browse">總覽</string>
 
     <!--TV END-->
 </resources>
