--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bcaas</string>
+    <string name="app_name">BCAAS</string>
 
     <!--translate-->
     <string name="unlock">Unlock wallet</string>
