--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -18,12 +18,14 @@
     <string name="please_enter_password_again">請再次輸入密碼</string>
     <string name="remember_password">該密碼用於加錢包信息和解鎖錢包，請牢記！！</string>
     <string name="account_address">帳戶地址</string>
+    <string name="account_address_en">帳戶地址</string>
     <string name="backup_private_key">備份私鑰</string>
     <string name="backup_private_key_detail">這是您錢包的私鑰，當密碼忘記時，可恢復您的錢包，丟失私鑰等於丟失財產。為妥善保存，建議在一張紙上寫下你的私鑰信息，以防丟失。</string>
     <string name="finish">完成</string>
     <string name="my_account_address">我的帳戶地址</string>
     <string name="my_account_address_tv">地址</string>
-    <string name="account_balance">餘額</string>
+    <string name="account_balance">帳戶餘額</string>
+    <string name="account_balance_tv">餘額</string>
     <string name="home">首頁</string>
     <string name="receive">接收</string>
     <string name="scan">掃描</string>
