--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BCAAS</string>
+    <string name="app_name">BCAASC</string>
 
     <!--translate   first-->
     <string name="unlock">解鎖錢包</string>
