--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -16,7 +16,7 @@
     <string name="confirm">確定</string>
     <string name="cancel">取消</string>
     <string name="please_enter_password_again">請再次輸入密碼</string>
-    <string name="remember_password">該密碼用於加錢包信息和解鎖錢包，請牢記！！</string>
+    <string name="password_input_rule_remind">該密碼用於加錢包信息和解鎖錢包，請牢記！</string>
     <string name="account_address">帳戶地址</string>
     <string name="account_address_en">帳戶地址</string>
     <string name="backup_private_key">備份私鑰</string>
