--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -18,6 +18,7 @@
     <string name="please_enter_password_again">請再次輸入密碼</string>
     <string name="password_input_rule_remind">該密碼用於加錢包信息和解鎖錢包，請牢記！</string>
     <string name="account_address">帳戶地址</string>
+    <string name="receiving_account">收款帳戶地址</string>
     <string name="account_address_en">帳戶地址</string>
     <string name="backup_private_key">備份私鑰</string>
     <string name="backup_private_key_detail">這是您錢包的私鑰，當密碼忘記時，可恢復您的錢包，丟失私鑰等於丟失財產。為妥善保存，建議在一張紙上寫下你的私鑰信息，以防丟失。</string>
