--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -106,7 +106,7 @@
     <string name="successfully_copied">复制成功</string>
     <string name="double_click_for_exit">再按一次返回键退出程序</string>
     <string name="transaction_to">向  %s   转账</string>
-    <string name="authorized_representative_address">授权代表地址账户</string>
+    <string name="authorized_representative_address">授权代表账户地址</string>
     <string name="no_account_address_add">没有收款账户地址，请添加</string>
     <string name="password_rule"><![CDATA[0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM!@#¥%^&*-_]]></string>
 
